--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;1,600&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="shortcut icon" href="./img/perfil-1.png">
+    <link rel="shortcut icon" href="./img/alexsa.png">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Sobre Mim</title>
 </head>
@@ -20,7 +20,7 @@
                 <p>Como neuropsicopedagoga, percebi na programação e desenvolvimento web uma chance de me reinventar e mergulhar no campo da tecnologia e inovação.</p>
                 <a href="./sobre-mensagem.html" class="nav-link text-white">Download CV</a>
             </div>
-            <img src="./img/perfil-1.png" alt="Imagem de uma pessoa" width="300">
+            <img src="./img/alexsa.png" alt="Imagem de uma pessoa" width="300">
     </section>
 <main>
     <article aria-label="seção sobre mim" class="sobre">
@@ -33,17 +33,17 @@
                 <span></span>
             </div>
         </div>  
-    <img src="./img/perfil-2.png" alt="imagem de uma pessoa">
+    <img src="./img/perfil (1).png" alt="imagem de uma pessoa">
         <div class="sobre_conteudo">
             <div class="sobre_texto">                
                 <h1>Olá! meu nome é <span>Alexsandra Silva</span></h1>
                 <br>
                 <p>Atualmente, estou cursando Sistemas de Informação e MBA em Engenharia de Software em Recife, Pernambuco, enquanto passo por uma transição de carreira para a área de TI. Minha experiência na educação me deu habilidades valiosas, como adaptabilidade, compreensão das necessidades dos alunos e habilidades de comunicação. Embora eu não tenha trabalhado diretamente na tecnologia, essas competências podem ser aplicadas na resolução de problemas e colaboração em equipes de tecnologia, tornando-me uma adição valiosa para esse campo. Estou entusiasmada para contribuir e aprender rapidamente no ambiente tecnológico.  
                 
-                    Acredito que minha formação em Pedagogia, Psicopedagogia e Neuropsicopedagogia complementa minha base de conhecimento. Também sou voluntária na mentoria de carreiras de Soft Skills, visando o crescimento pessoal e profissional das pessoas. 
+                    Acredito que minha formação em Pedagogia e Especialista em Psicopedagogia, Neuropsicopedagogia e Autismo complementa minha base de conhecimento. Também sou voluntária na mentoria de carreiras de Soft Skills, visando o crescimento pessoal e profissional das pessoas. 
                 <br>
                 <br>   
-                Nessa jornada, construí amizades valiosas e enfrentei desafios enriquecedores, como o projeto "Doguitto Pet Store e Inclusão In Foco" no desafio [Elas Na Tech 2023]. Adquiri habilidades essenciais para minha transição de carreira e futura atuação profissional. Esta jornada representa uma conquista pessoal significativa e enriquecedora.
+                Nessa jornada, venho construindo amizades valiosas e enfrentei desafios enriquecedores, como o projetos pessoais "Blog Inclusão In Foco", "Tira_Dúvidas_Tech" e "Coletivo Mulheres_na_Tech". Venho adquirindo habilidades essenciais para minha transição de carreira e futura atuação profissional. Esta jornada representa uma conquista pessoal significativa e enriquecedora.
                 </p>             
             </div>
         <div class="sobre_info">
@@ -52,11 +52,83 @@
                 <p><i class="fa-solid fa-location-dot"></i>Endereço: Recife - PE - Brasil</p>
                 <p><i class="fa-sharp fa-solid fa-globe"></i>Idiomas: Inglês Técnico</p>
                 <p><i class="fa-solid fa-flag"></i>Nacionalidade: Brasileira</p>
-                <p><i class="fa-solid fa-envelope"></i>E-mail: alexsa.tavares@gmail.com</p>
+                <p><i class="fa-solid fa-envelope"></i>E-mail: alexsa.tecnolog@gmail.com</p>
             </div>
         </div>
     </article>
 </main>
+<!-- Serviços Skill-->
+<div id="services-area">
+    <div class="container">
+        <div class="row">
+       <div class="col-12">
+   </div>
+     <article aria-label="seção sobre mim" class="sobre">
+       <div class="sobre_titulo">
+           <h1>Cursos</h1>
+           <p>Investimentos</p>
+           <div aria-label="Seção apenas de ilustrações de botões">
+            <span></span>
+            <span></span>
+            <span></span>
+           </div>
+           <br>
+           <br>
+       <div class="two-columns">
+       <ul id="about-list">
+         <li>Web Full Stack</li>
+         <li>Business Agility</li>
+         <li>Metodologias Ágeis</li>
+         <li>re/start AWS Cloud</li>
+       </ul>
+       <div class="clear"></div>
+       <ul id="about-list">
+         <li>Psicopedagoga</li>
+         <li>Neuropsicopedagoga</li>
+         <li>Pedagoga Empresarial</li>
+         <li>Engenharia de Software</li>
+       </ul>
+     </div>
+     </div>
+     <br>
+<!-- Serviços Skill-->
+<div id="services-area">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          </div>
+          <article aria-label="seção sobre mim" class="sobre">
+            <div class="sobre_titulo">
+                <h1>Skills</h1>
+                <p>Perfil Técnico</p>
+          <div aria-label="Seção apenas de ilustrações de botões">
+            <span></span>
+            <span></span>
+            <span></span>
+           </div>
+              <h2 class="titulo-skills" id="skills"></h2>
+                <ul class="grid_container">
+                  <li class="grid_items"><img src="./img/html.svg"><p></p></li>
+                  <li class="grid_items"><img src="./img/css.svg"><p></p></li>
+                  <li class="grid_items"><img src="./img/logo_java.png"><p></p></li>
+                  <li class="grid_items"><img src="./img/javascript.svg"><p></p></li>
+                  <li class="grid_items"><img src="./img/logo_python.png"><p></p></li>
+                  <li class="grid_items"><img src="./img/react.svg"><p></p></li>
+                  <li class="grid_items"><img src="./img/logo_aws.png"><p></p></li>
+                  <li class="grid_items"><img src="./img/microsoft.svg"><p></p></li>
+                  <li class="grid_items"><img src="./img/logo_Oracle_Cloud.jpg"><p></p></li>
+                  <li class="grid_items"><img src="./img/git.svg"><p></p></li>
+                  <li class="grid_items"><img src="./img/logo_github.png"><p></p></li>
+                  <li class="grid_items"><img src="./img/VSC.png"><p></p></li>
+                  <li class="grid_items"><img src="./img/logo-replit.png"><p></p></li>
+                  <li class="grid_items"><img src="./img/logo_nodejs.png"><p></p></li>
+                  <li class="grid_items"><img src="./img/logo_bootstrap.png"><p></p></li>
+                </ul>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
 <section class="projects">
     <div class="sobre_titulo">
         <h1>Meus Projetos</h1>
@@ -107,7 +179,7 @@
 <footer>
     <div id="footer-content">
         <div id="footer-contacts">
-            <img src="./img/logo-infoco.png" alt="logomarca" width="100">
+            <img src="./img/logo-bif.png" alt="logomarca" width="100">
             <br>
             <br>
             <p>É tudo sobre seus sonhos.</p>
@@ -129,9 +201,9 @@
         <ul class="footer-list">
             <li>
                 <h3>Blog</h3>
-            </li><br>
+            </li>
             <li>
-                <a href="https://alexsabrasil.github.io/BlogInFoco/" target="_blank" rel="noopener noreferrer" class="footer-link">IN FOCO</a>
+                <a href="https://alexsabrasil.github.io/blogInclusaoInfoco/" target="_blank" rel="noopener noreferrer" class="footer-link">Inclusão In Foco</a>
             </li>
         </ul>
         <div id="footer-subscribe">
