--- a/sobre-mensagem.html
+++ b/sobre-mensagem.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="./img/perfil-1.png">
+    <link rel="shortcut icon" href="./img/alexsa.png">
     <link rel="stylesheet" href="./css/estilo-msg.css">
     <title>Portfolio::Mensagem ao Recrutador(a)</title>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #19b6bb">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #b535dc">
             <div class="container d-flex justify-content-center align-items-center">
                 <a class="navbar-brand">
                     <span style="margin-right: 400%;"></span>
