--- a/index.html
+++ b/index.html
@@ -58,39 +58,35 @@
     </article>
 </main>
 <!-- Serviços Skill-->
-<div id="services-area">
-    <div class="container">
-        <div class="row">
-       <div class="col-12">
-   </div>
-     <article aria-label="seção sobre mim" class="sobre">
-       <div class="sobre_titulo">
-           <h1>Cursos</h1>
-           <p>Investimentos</p>
-           <div aria-label="Seção apenas de ilustrações de botões">
-            <span></span>
-            <span></span>
-            <span></span>
-           </div>
-           <br>
-           <br>
-       <div class="two-columns">
-       <ul id="about-list">
-         <li>Web Full Stack</li>
-         <li>Business Agility</li>
-         <li>Metodologias Ágeis</li>
-         <li>re/start AWS Cloud</li>
-       </ul>
-       <div class="clear"></div>
-       <ul id="about-list">
-         <li>Psicopedagoga</li>
-         <li>Neuropsicopedagoga</li>
-         <li>Pedagoga Empresarial</li>
-         <li>Engenharia de Software</li>
-       </ul>
-     </div>
-     </div>
-     <br>
+        <div id="services-area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                    </div>
+                        <article aria-label="seção sobre mim" class="sobre">
+                        <div class="sobre_titulo">
+                        <h1>Cursos</h1>
+                        <p>Investimentos</p>
+                        <div aria-label="Seção apenas de ilustrações de botões">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section> 
+        <div class="face">
+            <div class="front">
+                <img src="./img/skill1.png" width="260" height="180" alt="">
+            </div>
+            <div class="back">
+                <img src="./img/skill2.png" width="260"  height="180" alt="">
+            </div>
+        </div>
+    </section>
+     
 <!-- Serviços Skill-->
 <div id="services-area">
     <div class="container">
@@ -101,28 +97,28 @@
             <div class="sobre_titulo">
                 <h1>Skills</h1>
                 <p>Perfil Técnico</p>
-          <div aria-label="Seção apenas de ilustrações de botões">
+            <div aria-label="Seção apenas de ilustrações de botões">
             <span></span>
             <span></span>
             <span></span>
-           </div>
+            </div>
               <h2 class="titulo-skills" id="skills"></h2>
                 <ul class="grid_container">
-                  <li class="grid_items"><img src="./img/html.svg"><p></p></li>
-                  <li class="grid_items"><img src="./img/css.svg"><p></p></li>
-                  <li class="grid_items"><img src="./img/logo_java.png"><p></p></li>
-                  <li class="grid_items"><img src="./img/javascript.svg"><p></p></li>
-                  <li class="grid_items"><img src="./img/logo_python.png"><p></p></li>
-                  <li class="grid_items"><img src="./img/react.svg"><p></p></li>
-                  <li class="grid_items"><img src="./img/logo_aws.png"><p></p></li>
-                  <li class="grid_items"><img src="./img/microsoft.svg"><p></p></li>
-                  <li class="grid_items"><img src="./img/logo_Oracle_Cloud.jpg"><p></p></li>
-                  <li class="grid_items"><img src="./img/git.svg"><p></p></li>
-                  <li class="grid_items"><img src="./img/logo_github.png"><p></p></li>
-                  <li class="grid_items"><img src="./img/VSC.png"><p></p></li>
-                  <li class="grid_items"><img src="./img/logo-replit.png"><p></p></li>
-                  <li class="grid_items"><img src="./img/logo_nodejs.png"><p></p></li>
-                  <li class="grid_items"><img src="./img/logo_bootstrap.png"><p></p></li>
+                  <li class="grid_items"><img src="./img/html.svg"><p>HTML5</p></li>
+                  <li class="grid_items"><img src="./img/css.svg"><p>CSS3</p></li>
+                  <li class="grid_items"><img src="./img/logo_java.png"><p>JAVA</p></li>
+                  <li class="grid_items"><img src="./img/javascript.svg"><p>JavaScript</p></li>
+                  <li class="grid_items"><img src="./img/logo_python.png"><p>Python</p></li>
+                  <li class="grid_items"><img src="./img/react.svg"><p>React</p></li>
+                  <li class="grid_items"><img src="./img/logo_aws.png"><p>AWS</p></li>
+                  <li class="grid_items"><img src="./img/microsoft.svg"><p>Microsoft SQL Server</p></li>
+                  <li class="grid_items"><img src="./img/logo_Oracle_Cloud.jpg"><p>Oracle Cloud</p></li>
+                  <li class="grid_items"><img src="./img/git.svg"><p>Git</p></li>
+                  <li class="grid_items"><img src="./img/logo_github.png"><p>GitHub</p></li>
+                  <li class="grid_items"><img src="./img/VSC.png"><p>VSCODE</p></li>
+                  <li class="grid_items"><img src="./img/logo-replit.png"><p>Replit</p></li>
+                  <li class="grid_items"><img src="./img/logo_nodejs.png"><p>Node.js</p></li>
+                  <li class="grid_items"><img src="./img/logo_bootstrap.png"><p>Bootstrap</p></li>
                 </ul>
             </div>
         </div>
@@ -152,8 +148,10 @@
                 <li class="spas"><img src="./img/proj7.jpg" alt="Portifolio em Bootstrap"></li>
                 <li class="spas"><img src="./img/proj1.png"  alt="Blog de Informação Inclusão social"></li>
                 <li class="websites"><img src="./img/proj8.jpg" alt="Blog Olá Mundo"></li>
-                <li class="games"><img src="./img/proj0.png" alt="Loja Doguitto"></li>
+                <li class="websites"><img src="./img/proj0.png" alt="Loja Doguitto"></li>
+                <li class="games"><img src="./img/proj2.jpg" alt="Jogo Mentalista"></li>
                 <li class="games"><img src="./img/proj5.jpg" alt="Clone da Netflix"></li>
+                <li class="games"><img src="./img/proj11.gif" alt="Jogo Snaper"></li>
                 <li class="websites"><img src="./img/proj6.png" alt="Desafio Campinho"></li>
                 <li class="spas"><img src="./img/proj9.png" alt="Formulário de Dados"></li>
             </ul>
