--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
                 <ul class="grid_container">
                   <li class="grid_items"><img src="./img/html.svg"><p>HTML5</p></li>
                   <li class="grid_items"><img src="./img/css.svg"><p>CSS3</p></li>
+                  <li class="grid_items"><img src="./img/logo_net.svg"><p>.NET</p></li>
+                  <li class="grid_items"><img src="./img/logo-c#.jpg"><p>C#</p></li>
                   <li class="grid_items"><img src="./img/logo_java.png"><p>JAVA</p></li>
                   <li class="grid_items"><img src="./img/javascript.svg"><p>JavaScript</p></li>
                   <li class="grid_items"><img src="./img/logo_python.png"><p>Python</p></li>
