Inclusao de novos projetos

--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@
                   <li class="grid_items"><img src="./img/html.svg"><p>HTML5</p></li>
                   <li class="grid_items"><img src="./img/css.svg"><p>CSS3</p></li>
                   <li class="grid_items"><img src="./img/logo_net.svg"><p>.NET</p></li>
-                  <li class="grid_items"><img src="./img/logo-c#.jpg"><p>C#</p></li>
+                  <li class="grid_items"><img src="./img/logo_c#.jpg"><p>C#</p></li>
                   <li class="grid_items"><img src="./img/logo_java.png"><p>JAVA</p></li>
                   <li class="grid_items"><img src="./img/javascript.svg"><p>JavaScript</p></li>
                   <li class="grid_items"><img src="./img/logo_python.png"><p>Python</p></li>
                   <li class="grid_items"><img src="./img/react.svg"><p>React</p></li>
+                  <li class="grid_items"><img src="./img/logo_nodejs.png"><p>Node.js</p></li>
+                  <li class="grid_items"><img src="./img/logo_bootstrap.png"><p>Bootstrap</p></li>
                   <li class="grid_items"><img src="./img/logo_aws.png"><p>AWS</p></li>
                   <li class="grid_items"><img src="./img/microsoft.svg"><p>Microsoft SQL Server</p></li>
                   <li class="grid_items"><img src="./img/logo_Oracle_Cloud.jpg"><p>Oracle Cloud</p></li>
@@ -119,8 +121,6 @@
                   <li class="grid_items"><img src="./img/logo_github.png"><p>GitHub</p></li>
                   <li class="grid_items"><img src="./img/VSC.png"><p>VSCODE</p></li>
                   <li class="grid_items"><img src="./img/logo-replit.png"><p>Replit</p></li>
-                  <li class="grid_items"><img src="./img/logo_nodejs.png"><p>Node.js</p></li>
-                  <li class="grid_items"><img src="./img/logo_bootstrap.png"><p>Bootstrap</p></li>
                 </ul>
             </div>
         </div>
@@ -155,7 +155,7 @@
                 <li class="games"><img src="./img/proj5.jpg" alt="Clone da Netflix"></li>
                 <li class="games"><img src="./img/proj11.gif" alt="Jogo Snaper"></li>
                 <li class="websites"><img src="./img/proj6.png" alt="Desafio Campinho"></li>
-                <li class="spas"><img src="./img/proj9.png" alt="Formulário de Dados"></li>
+                <li class="spas"><img src="./img/proj9.png" alt="API-Pokedex-React"></li>
             </ul>
             <a href="https://github.com/alexsabrasil" target="_blank" rel="noopener noreferrer" style="display: block; text-align: center; margin: 0 auto;">Acesse os repositórios dos projetos.</a>
         </div>
