--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <span></span>
             </div>
         </div>  
-    <img src="./img/perfil (1).png" alt="imagem de uma pessoa">
+    <img src="./img/perfil(1).png" alt="imagem de uma pessoa">
         <div class="sobre_conteudo">
             <div class="sobre_texto">                
                 <h1>Olá! meu nome é <span>Alexsandra Silva</span></h1>
@@ -107,7 +107,7 @@
                   <li class="grid_items"><img src="./img/html.svg"><p>HTML5</p></li>
                   <li class="grid_items"><img src="./img/css.svg"><p>CSS3</p></li>
                   <li class="grid_items"><img src="./img/logo_net.svg"><p>.NET</p></li>
-                  <li class="grid_items"><img src="./img/logo_c#.jpg"><p>C#</p></li>
+                  <li class="grid_items"><img src="./img/logo_csharp.jpg"><p>C#</p></li>
                   <li class="grid_items"><img src="./img/logo_java.png"><p>JAVA</p></li>
                   <li class="grid_items"><img src="./img/javascript.svg"><p>JavaScript</p></li>
                   <li class="grid_items"><img src="./img/logo_python.png"><p>Python</p></li>
